--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -268,7 +268,7 @@ customCode:
     enterTableTarget: "대상 테이블 명을 입력하세요."
     enterValueColumn: "값 컬럼 명을 입력하세요."
     pCodeNotExist: "부모 코드가 존재하지 않습니다."
-    searchDescription: "프로세스와 문서양식에서 사용하는 커스텀 코드를 추가하거나 조회 및 관리합니다."
+    searchDescription: "프로세스와 문서양식에서 사용하는 커스텀 코드를 조회 및 관리합니다."
     selectNotDuplicateSearchColumn: "조건 항목에 검색 컬럼을 중복 없이 선택하세요."
     viewDescription: "프로세스와 문서양식에서 사용하는 커스텀 코드에 대한 상세 정보를 조회합니다."
 
@@ -536,7 +536,7 @@ image:
     existNotAllowedExtension: "허용하지 않는 확장자의 파일이 있습니다. 제외하고 업로드를 진행하시겠습니까?"
     failedRename: "파일명 변경이 실패하였습니다. 동일한 파일명이 있거나 수정 권한이 있는지 확인하세요."
     fileSelect: "파일을 선택하세요."
-    listDescription: "문서양식에서 사용할 이미지를 추가하거나 조회 및 관리합니다."
+    searchDescription: "문서양식에서 사용할 이미지를 추가하거나 조회 및 관리합니다."
 
 # Login
 login:
@@ -796,7 +796,7 @@ token:
     view: "문서 조회"
     write: "처리할 문서"
   msg:
-    searchDescription: "나와 관련된 모든 문서를 조회 및 처리합니다."
+    searchDescription: "나와 관련된 문서를 조회 및 처리합니다."
     tag: "태그를 입력하세요."
   type:
     completed: "완료된 문서"
