--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -324,7 +324,7 @@ document:
     type: "업무흐름 구분"
     write: "신청서 작성"
   msg:
-    adminSearchDescription: "프로세스와 문서양식을 조합하여 업무흐름을 추가하거나 조회 및 관리합니다."
+    adminSearchDescription: "프로세스와 문서양식을 조합하여 업무흐름을 조회 및 관리합니다."
     checkDocument: "문서를 다시 확인하세요."
     checkDuplication: "이미 해당 문서와 프로세스로 생성된 업무흐름이 존재합니다."
     confirmDeleteInstance: "임시 상태로 작성된 문서 모두 삭제하시겠습니까?"
@@ -442,7 +442,7 @@ form:
     minLength: "{0}글자 이상 입력하세요."
     number: "숫자만 입력하세요."
     required: "필수 항목을 입력하세요."
-    searchDescription: "문서양식를 추가하거나 조회 및 관리합니다."
+    searchDescription: "문서양식를 조회 및 관리합니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
   component:
     checkbox: "Checkbox"
@@ -683,7 +683,7 @@ process:
   msg:
     duplicateData: "동일한 데이터가 존재합니다."
     enterProcessName: "프로세스 이름을 입력하세요."
-    searchDescription: "프로세스를 추가하거나 조회 및 관리합니다."
+    searchDescription: "프로세스를 조회 및 관리합니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
   title:
     edit: "Zenius ITSM : 프로세스 편집"
