#9192 [ 코드 ] 코드 등록 시, 부모코드를 입력하지 않고 등록한 경우, 코드 트리 리스트에 출력되지 않는다. 일감 수정 진행

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -221,6 +221,7 @@ code:
     description: "View, add, or edit Code's information."
     duplicateCode: "Duplicate code Exists."
     enterCode: "Please enter a code."
+    enterPCode: "Please enter a Parent Code."
     pCodeNotExist: "Parent code does not exist."
     referenceCodeExist: "Code exists that references the code."
 
