#9445 [이미지 관리] 이미지 미리보기 모달 기능

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -530,7 +530,8 @@ form:
 # Image
 image:
   label:
-    list: "Image management"
+    name: "Image"
+    list: "Image Management"
     popupTitle: "Select Image"
     upload: "Upload Your Image"
   msg:
