#9390 [Modal] 문서함 > 관련문서 추가
- MR feedback

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -798,6 +798,7 @@ token:
     view: "Document View"
     write: "My Document"
   msg:
+    selectToken: "Check the related documents to be added."
     searchDescription: "View and search documents relating to me."
     tag: "Insert tags."
   type:
