--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -890,6 +890,7 @@ validation:
     checkImportFormat: "형식에 맞는 IMPORT 파일을 선택하세요."
     checkRgbFormat: "RGB 형식에 맞게 입력하세요."
     checkUserIdFormat: "사용자 아이디 형식에 맞게 입력해주세요."
+    dataNotDuplicate: "중복된 데이터는 포함할 수 없습니다."
     elementNotExist: "해당 엘리먼트 요소는 존재하지 않습니다."
     pwContainsEmail: "비밀번호에 이메일 아이디가 포함되어 있습니다."
     pwContainsId: "비밀번호에 아이디가 포함되어 있습니다."
