#9570 [ITSM] 리스트 공통 mixin 생성

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -222,6 +222,7 @@ code:
     description: "Code Description"
     name: "Code Name"
     pCode: "Parent Code"
+    searchPlaceholder: "Code"
     seqNum: "The order of the output"
   msg:
     duplicateCode: "Duplicate code Exists."
