#9638 [단위 테스트 - 게시판] 탭 제목 오류
- 탭 제목 수정
- url 및 관련 명명 오타 수정

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -210,7 +210,7 @@ board:
     enterBoardTitle: "Please enter the board name."
     enterCategoryName: "Please enter the category name."
     modifyDescription: "Edit board's information."
-    replayDescription: "You can add a reply."
+    replyDescription: "You can add a reply."
     searchDescription: "View and manage posts."
     viewDescription: "Inquire detailed information about the post."
 
