--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -210,7 +210,7 @@ board:
     enterBoardTitle: "게시판 명을 입력하세요."
     enterCategoryName: "카테고리 명을 입력하세요."
     modifyDescription: "글을 변경 할 수 있습니다."
-    replayDescription: "답글을 추가 할 수 있습니다."
+    replyDescription: "답글을 추가 할 수 있습니다."
     searchDescription: "게시글을 조회 및 관리합니다."
     viewDescription: "게시글에 대한 상세 정보를 조회합니다."
 
