--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -531,6 +531,7 @@ form:
 # Image
 image:
   label:
+    count: "Image total {0}"
     name: "Image"
     list: "Image Management"
     popupTitle: "Select Image"
