#9688 [단위 테스트 - 문서함] 문서함 목록에 등록일이 다국어가 되지 않는다. 1. 다국어 적용

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -286,6 +286,16 @@ dashboard:
     running: "Running"
     wait: "Wait"
 
+# Date
+date:
+  label:
+    yearsAgo: "{0} years ago"
+    monthsAgo: "{0} months ago"
+    daysAgo: "{0} days ago"
+    hoursAgo: "{0} hours ago"
+    minutesAgo: "{0} minutes ago"
+    aMomentAgo: "a moment ago"
+
 # DatePicker
 datepicker:
   btn:
