#9579 [단위 테스트 - 역할] 다국어 처리 오류

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -784,7 +784,7 @@ role:
     id: "Role Id"
     name: "Role Name"
     referenceCount: "Reference Count"
-    roel: "Role"
+    role: "Role"
   msg:
     duplicateRoleId: "Duplicate role id! Please enter other role id."
     duplicateRoleName: "Duplicate role name! Please enter other role name."
