#9720 [단위 테스트 - 업무흐름] 임시 > 사용 상태로 변경 시, 취소 버튼을 클릭해도 신청서 상태가 변경된다.
* "상태를 사용으로 변경 하시겠습니까? 임시 상태로 작성된 문서 모두 삭제 됩니다."으로 메시지 변경
* saveDocument 함수에서 취소 함수를 null로 변경.

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -337,9 +337,10 @@ document:
     write: "Service Request Write"
   msg:
     adminSearchDescription: "View and manage workflow by combining process and document form."
+    changeStatusEnabled: "Do you want to change the status to enabled? All documents written in temporary status
+    will be deleted."
     checkDocument: "Please check the document again."
     checkDuplication: "Duplication document. check form and process."
-    confirmDeleteInstance: "Are you sure you want to delete all documents created in a temporary state?"
     enterBusinessFlowColor: "Please enter Business Flow Color."
     enterDocumentName: "Please enter document's name."
     launchedInstance: "There is an instance started and cannot be deleted."
