--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -337,9 +337,9 @@ document:
     write: "신청서 작성"
   msg:
     adminSearchDescription: "프로세스와 문서양식을 조합하여 업무흐름을 조회 및 관리합니다."
+    changeStatusEnabled: "상태를 사용으로 변경 하시겠습니까? 임시 상태로 작성된 문서 모두 삭제 됩니다."
     checkDocument: "문서를 다시 확인하세요."
     checkDuplication: "이미 해당 문서와 프로세스로 생성된 업무흐름이 존재합니다."
-    confirmDeleteInstance: "임시 상태로 작성된 문서 모두 삭제하시겠습니까?"
     enterBusinessFlowColor: "업무흐름 색상을 입력하세요."
     enterDocumentName: "신청서 이름을 입력하세요."
     launchedInstance: "시작된 인스턴스가 있어 삭제할 수 없습니다."
