#9736 회원 가입시 메일인증 디자인 적용
- MR feedback

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,6 +80,9 @@ server:
 # user defalut profile path
 user.default.profile: /public/assets/media/images/avatar/img_avatar_01.png
 
+# email certificate image path
+mail.certificate.image: D:\\files\img_email_certificate.png
+
 # upload file directory (default: tomcat)
 file.upload.dir: D:\\files
 
