#9022 [문서 양식] 미리보기, 변경 팝업에 이미지 태그에 alt 속성 부여

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -682,6 +682,7 @@ process:
     description: "Description"
     detail: "Detail Process"
     edit: "Edit Process"
+    imageDownload: "Download as Image"
     import: "Process Import"
     importFile: "Import File"
     name: "Process Name"
