#9010 건수 표시가 필요한지 검토 필요
- MR 응대 (건수 -> 총 건수)로 변경

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -25,7 +25,7 @@ common:
     blank: " "
     comment: "Comment"
     contents: "Contents"
-    count: "total {0}"
+    toalCount: "total {0}"
     createDate: "Create Date"
     createUser: "Create User"
     delete: "Delete"
