#9010 건수 표시가 필요한지 검토 필요
메시지 common.label.totalCount -> common.label.count으로 변경 함

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -25,7 +25,7 @@ common:
     blank: " "
     comment: "댓글"
     contents: "내용"
-    totalCount: "{0} 건"
+    count: "{0} 건"
     createDate: "등록 일시"
     createUser: "등록자"
     delete: "삭제"
