--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -25,7 +25,7 @@ common:
     blank: " "
     comment: "Comment"
     contents: "Contents"
-    toalCount: "total {0}"
+    count: "total {0}"
     createDate: "Create Date"
     createUser: "Create User"
     delete: "Delete"
