#8258 컴포넌트 추가 - Dynamic Row Table 컴포넌트

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -445,6 +445,7 @@ form:
     undo: "Undo"
   msg:
     enterFormName: "Please enter a form name."
+    failedAllColumnDelete: "At least one column is required."
     failedFormDelete: "The document failed to delete the form. Please make sure that the application issued."
     fileSelect: "Please select a file."
     information: "There are no common editable component detail attributes."
@@ -463,6 +464,7 @@ form:
     datetime: "Date Time"
     divider: "Divider"
     dropdown: "Dropdown"
+    dynamic-row-table: "DR Table"
     fileupload: "Fileupload"
     image: "Image"
     inputbox: "Input Box"
@@ -485,6 +487,8 @@ form:
     dataAttribute: "Data Attribute"
     desc: "Description"
     display: "Display"
+    field: "Column Option"
+    header: "Header"
     id: "ID"
     label: "Label"
     name: "Name"
@@ -494,6 +498,7 @@ form:
     validate: "Validate"
   attribute:
     align: "Align"
+    border: "Border Color"
     buttonText: "Button Text"
     color: "Color"
     column: "Column"
@@ -504,6 +509,7 @@ form:
     datetimeMin: "Min Datetime"
     default: "Default"
     editorUseYn: "Editor Use"
+    field: "{0} Column"
     height: "Height"
     isTopic: "is Topic"
     lengthMax: "Max Length"
@@ -513,6 +519,8 @@ form:
     placeholder: "Placeholder"
     position: "Position"
     regexpMsg: "Error Message"
+    rowMin: "Min Row"
+    rowMax: "Max Row"
     rows: "Row"
     size: "Size"
     text: "Content"
@@ -521,6 +529,7 @@ form:
     timeMin: "Min Hour"
     type: "Type"
     validate: "Validate"
+    visible: "Visible"
     width: "Width"
     option:
       code: "Custom Code Data"
