--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -445,6 +445,7 @@ form:
     undo: "작업 취소"
   msg:
     enterFormName: "양식이름을 입력하세요."
+    failedAllColumnDelete: "최소 1개 열은 필수입니다."
     failedFormDelete: "문서양식을 삭제할 수 없습니다. 발행된 신청서가 있는 지 확인하세요."
     fileSelect: "파일을 선택하세요."
     information: "공통 편집 가능한 컴포넌트 세부 속성이 존재하지 않습니다."
@@ -463,6 +464,7 @@ form:
     datetime: "Date Time"
     divider: "Divider"
     dropdown: "Dropdown"
+    dynamic-row-table: "DR Table"
     fileupload: "Fileupload"
     image: "Image"
     inputbox: "Input Box"
@@ -485,6 +487,8 @@ form:
     dataAttribute: "컴포넌트 속성"
     desc: "설명"
     display: "출력속성"
+    field: "열 옵션"
+    header: "헤더"
     id: "아이디"
     label: "라벨"
     name: "이름"
@@ -494,6 +498,7 @@ form:
     validate: "유효성"
   attribute:
     align: "정렬"
+    border: "테두리 색상"
     buttonText: "버튼 텍스트"
     color: "색상"
     column: "컬럼 너비"
@@ -504,6 +509,7 @@ form:
     datetimeMin: "최소 일시"
     default: "기본값"
     editorUseYn: "에디터 사용여부"
+    field: "{0} 열"
     height: "높이"
     isTopic: "미리보기"
     lengthMax: "최대길이"
@@ -513,6 +519,8 @@ form:
     placeholder: "Placeholder"
     position: "위치"
     regexpMsg: "에러 메시지"
+    rowMin: "최소 입력 행 수"
+    rowMax: "최대 입력 행 수"
     rows: "입력 행 수"
     size: "글씨 크기"
     text: "내용"
@@ -521,6 +529,7 @@ form:
     timeMin: "최소 시간"
     type: "타입"
     validate: "유효성 타입"
+    visible: "표시 여부"
     width: "너비"
     option:
       code: "코드"
