#8358 Accordion 컴포넌트 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -458,6 +458,7 @@ form:
     searchDescription: "View and manage forms."
     selectImportFile: "Please select an import file."
   component:
+    accordion-start: "Accordion"
     checkbox: "Checkbox"
     custom-code: "Custom Code"
     date: "Date"
