--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -457,6 +457,7 @@ form:
     searchDescription: "문서양식를 조회 및 관리합니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
   component:
+    accordion-start: "Accordion"
     checkbox: "Checkbox"
     custom-code: "Custom Code"
     date: "Date"
