--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -162,7 +162,8 @@ authentication:
   msg:
     alreadyAuthenticated: "Authentication is already complete."
     authenticationCompleted: "Authentication completed successfully."
-    beforeEmailCheck: "This account is available after authentication.<br/>Please check your email sent to finish authentication.<br/>If you have not received the authentication mail, please click below."
+    beforeEmailCheck: "This account is available after authentication."
+    beforeEmailCheckDescription: "TPlease check your email sent to finish authentication.<br/>If you have not received the authentication mail, please click below."
     emailCheck: "Please check your email sent to finish authentication."
     expiredAuthentication: "Authentication mail has expired."
     recallAuthentication: "Please re-request authentication mail after login."
@@ -925,6 +926,7 @@ project:
   label:
     name: "Zenius ITSM"
   title:
+    authenticationEmail: "Authentication Email"
     browserGuide: "Zenius ITSM : Browser Guide"
     error: "Zenius ITSM : Error"
     login: "Zenius ITSM : Login"
