--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -951,6 +951,7 @@ pattern:
     enterPatternValue: "패턴 값을 입력하세요."
     enterPatternSequenceValue: "패턴 값을 1이상 4이하로 입력하세요."
     searchPlaceholder: "패턴 명"
+    usedPattern: "해당 패턴을 사용 중입니다."
   type:
     date: "Date"
     sequence: "Sequence"
@@ -974,3 +975,4 @@ rule:
     editDescription: "문서번호를 추가하거나 조회 및 관리한다."
     enterRuleName: "문서번호 명을 입력하세요."
     searchPlaceholder: "문서번호 명"
+    selectSequence: "Sequence를 최소 하나 이상 포함해야 합니다."
