문서번호 기능 구현

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -972,3 +972,4 @@ rule:
     enterRuleName: "Please enter a rule name."
     searchPlaceholder: "Document Number"
     selectSequence: "It must contain at least one sequence."
+    usedRule: "This document number is being used."
