--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -450,6 +450,7 @@ form:
     failedFormDelete: "문서양식을 삭제할 수 없습니다. 발행된 신청서가 있는 지 확인하세요."
     fileSelect: "파일을 선택하세요."
     information: "공통 편집 가능한 컴포넌트 세부 속성이 존재하지 않습니다."
+    label: "입력 항목은 숫자와 문자로 시작, 종료 되어야하고 숫자,문자, 쉼표(.), 언더바(_), 대시(-) 만 포함 할 수 있습니다."
     max: "{0} 이하로 입력하세요."
     maxLength: "{0}글자 이하로 입력하세요."
     min: "{0} 이상 입력하세요."
@@ -514,6 +515,7 @@ form:
     field: "{0} 열"
     height: "높이"
     isTopic: "미리보기"
+    labelList: "컴포넌트 라벨"
     lengthMax: "최대길이"
     lengthMin: "최소길이"
     mappingId: "매핑 아이디"
@@ -537,6 +539,7 @@ form:
       code: "코드"
       date: "{0}일 후"
       datetime: "{0}일 {0}시간 후"
+      key: "키"
       name: "이름"
       none: "없음"
       now: "현재"
