CMDB Class ITSM, Engine Module 구현

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -239,6 +239,7 @@ cmdb:
   class:
     label:
       attributeList: "속성 목록"
+      classId: "클래스 Id"
       description: "설명"
       management: "Class 관리"
       name: "이름"
