#9885 CI Type 화면에 Type 트리 출력
- (dummy data, icon 포함) 트리 구조 출력 및 검색 기능

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -231,7 +231,17 @@ cmdb:
     btn:
       import: "Import"
       export: "Export"
-
+  type:
+    label:
+      management: "Type Management"
+      searchPlaceholder: "Type"
+      parentType: "Parent Type"
+      name: "Type Name"
+      description: "Description"
+      icon: "Icon"
+      class: "Class"
+    msg:
+      searchDescription: "CI Type manage posts."
 # Code
 code:
   label:
@@ -644,6 +654,7 @@ menu:
   cmdb:
     parent: "CMDB"
     attribute: "Attribute"
+    type: "Type"
 
 # Notice
 notice:
