#9885 CI Type 화면에 Type 트리 출력
- 화면 구조 수정

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -243,6 +243,9 @@ cmdb:
       class: "Class"
     msg:
       searchDescription: "CI Type을 조회 및 관리합니다."
+    btn:
+      import: "가져오기"
+      export: "내보내기"
 
 # Code
 code:
