#9887 CI Class 화면에 상세정보 출력

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -242,7 +242,7 @@ cmdb:
       description: "Description"
       management: "Class Management"
       name: "Name"
-      pClassId: "Parent Class"
+      pClassName: "Parent Class"
       searchPlaceholder: "Class Name / Description"
     msg:
       editDescritpion: "Add, view and manage CMDB Class."
