--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -239,11 +239,10 @@ cmdb:
   class:
     label:
       attributeList: "속성 목록"
-      classId: "클래스 Id"
       description: "설명"
       management: "Class 관리"
       name: "이름"
-      pClassId: "부모 Class"
+      pClassName: "부모 Class"
       searchPlaceholder: "Class 명 / 설명"
     msg:
       editDescription: "CI Class를 조회 및 관리합니다."
