#9927, 9928 CI Attribute CRUD 1. 목록 조회 수정 (제목 링크 및 버튼 옵션, 검색 대소문자 구별) 2. 등록, 수정화면 구현 3. 삭제 기능 구현 4. 수정 기능 구현 진행 중

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -224,15 +224,21 @@ board:
 cmdb:
   attribute:
     label:
-      management: "Attribute Management"
-      searchPlaceholder: "Label / Type / Attribute Name / Description"
-      name: "Attribute Name"
-      label: "Label"
-      type: "Type"
       description: "Description"
+      details: "Details"
       export: "Export"
+      label: "Label"
+      management: "Attribute Management"
+      name: "Attribute Name"
+      searchPlaceholder: "Label / Type / Attribute Name / Description"
+      type: "Type"
+      view: "Attribute"
     msg:
+      attributeUsed: "The Attribute is being used."
+      enterAttributeName: "Please enter a attribute name."
       searchDescription: "CI Attribute manage posts."
+      selectAttributeType: "Please select the type."
+      viewDescription: "Inquires detailed information about the attribute."
     btn:
       import: "Import"
       export: "Export"
