#9887 CI Class 화면에 상세정보 출력

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -245,6 +245,7 @@ cmdb:
       pClassName: "Parent Class"
       searchPlaceholder: "Class Name / Description"
     msg:
+      confirmDeleteAttribute: "Are you sure you want to delete the attribute?"
       editDescritpion: "Add, view and manage CMDB Class."
       enterClassName: "Please enter a class name."
     btn:
