1. 등록, 수정 기능 구현 2. attributeName 중복 처리 추가 (알림포함) 3. view 화면 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -234,7 +234,7 @@ cmdb:
       type: "Type"
       view: "Attribute"
     msg:
-      attributeUsed: "The Attribute is being used."
+      attributeNameUsed: "The Attribute Name is being used."
       enterAttributeName: "Please enter a attribute name."
       searchDescription: "CI Attribute manage posts."
       selectAttributeType: "Please select the type."
