다국어 메시지 Session Storage 사용하도록 수정.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -110,7 +110,8 @@ file.upload.dir: /root/files
 spring:
   profiles: hcjung
   datasource:
-    url: jdbc:log4jdbc:postgresql://10.0.10.175:32783/itsm
+    #url: jdbc:log4jdbc:postgresql://10.0.10.175:32783/itsm
+    url: jdbc:log4jdbc:postgresql://10.0.10.175:32784/itsm
 
 ---
 spring:
