--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -249,7 +249,6 @@ cmdb:
     msg:
       editDescription: "CI Class를 조회 및 관리합니다."
       enterClassName: "Class 이름을 입력하세요."
-
     btn:
       import: "가져오기"
       export: "내보내기"
@@ -264,6 +263,8 @@ cmdb:
       class: "Class"
     msg:
       searchDescription: "CI Type을 조회 및 관리합니다."
+      enterPType: "부모 Type을 선택하세요."
+      enterTypeName: "Type 명을 입력하세요."
     btn:
       import: "가져오기"
       export: "내보내기"
