--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -270,6 +270,7 @@ cmdb:
       searchDescription: "CI Type manage posts."
       enterPType: "Please choose Parent Type node."
       enterTypeName: "Please enter a Type Name."
+      selectType: "Please select a Type."
     btn:
       import: "Import"
       export: "Export"
