--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -271,6 +271,7 @@ cmdb:
       searchDescription: "CI Type을 조회 및 관리합니다."
       enterPType: "부모 Type을 선택하세요."
       enterTypeName: "Type 명을 입력하세요."
+      selectType: "Type을 선택하세요."
     btn:
       import: "가져오기"
       export: "내보내기"
