#9979 CI Type Class 선택 모달 구현
- MR feedback

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -271,6 +271,7 @@ cmdb:
       enterPType: "Please choose Parent Type node."
       enterTypeName: "Please enter a Type Name."
       selectType: "Please select a Type."
+      selectAvilableClass: "Please select a available Class.<br/>(not root)"
     btn:
       import: "Import"
       export: "Export"
