#9886 CI Class 화면에서 Class에 Attribute 추가하기 기능 구현 MR 응대

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -242,6 +242,23 @@ cmdb:
     btn:
       import: "Import"
       export: "Export"
+  ci:
+    label:
+      ciNo: "CI No."
+      ciInquery: "CI Inquiry"
+      description: "Description"
+      export: "Export"
+      name: "Name"
+      searchPlaceholder: "CI Name / Description"
+      tag: "Tag"
+      tagPlaceholder: "#Tag"
+      type: "Type"
+    msg:
+      enterCiName: "Please enter a CI Name."
+      searchDescription: "Add, view and manage CMDB CI."
+    btn:
+      import: "Import"
+      export: "Export"
   class:
     label:
       attributeList: "Attribute List"
