--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -243,6 +243,23 @@ cmdb:
     btn:
       import: "가져오기"
       export: "내보내기"
+  ci:
+    label:
+      ciNo: "CI No."
+      ciInqury: "CI 조회"
+      description: "설명"
+      export: "내보내기"
+      name: "이름"
+      searchPlaceholder: "CI 명 / 설명"
+      tag: "태그"
+      tagPlaceholder: "#태그"
+      type: "타입"
+    msg:
+      enterCiName: "CI 이름을 입력하세요."
+      searchDescription: "CI를 조회 및 관리합니다."
+    btn:
+      import: "가져오기"
+      export: "내보내기"
   class:
     label:
       attributeList: "속성 목록"
