message file commit

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -244,6 +244,7 @@ cmdb:
       export: "Export"
   ci:
     label:
+      all: "All"
       ciNo: "CI No."
       ciInquiry: "CI Inquiry"
       export: "Export"
