ci 프로필에 active 속성 줬던 것 삭제. (실수)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -129,7 +129,6 @@ file.upload.dir: /root/files
 ---
 # For jenkins test
 spring:
-  profiles:
-    active: ci
+  profiles: ci
   datasource:
     url: jdbc:log4jdbc:postgresql://itsm.dev.db.develop:5432/itsm
