#9883 CI 조회 목록 commit

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -248,7 +248,7 @@ cmdb:
       ciNo: "CI No."
       ciInquiry: "CI Inquiry"
       export: "Export"
-      searchPlaceholder: "CI Name / Description"
+      searchPlaceholder: "CI No / CI Type / CI Name / Description"
       tag: "Tag"
       tagPlaceholder: "#Tag"
       delete: "CI Delete"
