--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -244,6 +244,11 @@ cmdb:
       import: "가져오기"
       export: "내보내기"
   ci:
+    actionType:
+      delete: "삭제"
+      modify: "변경"
+      read: "조회"
+      register: "신규"
     label:
       delete: "CI 삭제"
       description: "CI 설명"
@@ -251,7 +256,11 @@ cmdb:
       register: "CI 등록"
       name: "CI 이름"
       new: "신규"
+      searchPlaceholder: "CI No / CI 타입 / CI 이름"
       select: "CI 선택"
+      seqNum: "CI No"
+      tag: "태그"
+      tagPlaceholder: "#태그"
       type: "CI 타입"
       update: "CI 변경"
   class:
