--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -221,16 +221,26 @@ board:
     viewDescription: "게시글에 대한 상세 정보를 조회합니다."
 
 # CMDB
-# Todo: 메시지 셋 구조 검토
 cmdb:
   attribute:
     label:
+      buttonText: "버튼 텍스트"
+      default: "기본값"
       description: "설명"
       details: "세부정보"
       export: "내보내기"
       label: "라벨"
       management: "Attribute 관리"
       name: "Attribute 명"
+      option:
+        check: "Check"
+        code: "코드"
+        required: "필수 조건"
+        label: "Label"
+        none: "없음"
+        session: "세션"
+        validate: "유효성"
+        value: "Value"
       searchPlaceholder: "라벨 / 타입 / Attribute 명 / 설명"
       type: "타입"
       view: "Attribute"
