--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -212,7 +212,7 @@ board:
     adminViewDescription: "게시판에 대한 상세 정보를 조회합니다."
     createDescription: "글을 추가 할 수 있습니다."
     editDescription: "게시글을 등록하거나 수정, 삭제합니다."
-    enterAttachFileSize: "첨부파일 용량을 0MB 이상 1024MB 이하로 입력하세요."
+    enterAttachFileSize: "첨부파일 용량을 0MB 초과 1024MB 이하로 입력하세요."
     enterBoardTitle: "게시판 명을 입력하세요."
     enterCategoryName: "카테고리 명을 입력하세요."
     modifyDescription: "글을 변경 할 수 있습니다."
