--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -827,7 +827,7 @@ process:
     searchDescription: "프로세스를 조회 및 관리합니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
   title:
-    edit: "Zenius ITSM : 프로세스 편집"
+    edit: "Zenius ITSM : 프로세스 변경"
     preview: "Zenius ITSM : 프로세스 미리보기"
     processMap: "Zenius ITMS : 프로세스 맵"
   status:
