--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -1010,21 +1010,19 @@ user:
     signUpFail: "가입 실패되었습니다."
     usageStatus: "※ 미사용 시, 로그인 및 모든 시스템 사용이 불가능합니다."
   tooltip:
-    idRule: "※ 영문,숫자,특수문자(@, ., -, _) 사용 가능.<br/>
-    ※ 허용된 특수문자는 맨 앞에 올 수 없다.<br/>
-    ※ 공백을 허용하지 않는다."
-    pwRule: "※ 2가지 이상의 문자 종류(대문자, 소문자,<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;특수문자, 숫자)인 경우, 8자 이상 20자 미만,
-    &nbsp;&nbsp;&nbsp;&nbsp;1가지 종류의 문자 구성인 경우 10자 이상
-    &nbsp;&nbsp;&nbsp;&nbsp;20자 미만의 비밀번호 입력 제한 범위를
-    &nbsp;&nbsp;&nbsp;&nbsp;가진다.<br/><br/>
-    ※ 사용자의 ID를 포함하지 않는다.<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;예) ID가 zenius인 경우, zeniu는 포함 가능,<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; zenius는 포함 불가.<br/><br/>
-    ※ 사용자의 이메일 ID를 포함하지 않는다.<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;예) 이메일ID가 zenius인 경우,<br/>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; zeniu는 포함 가능, zenius는 포함 불가<br/><br/>
-    ※ 공백을 허용하지 않는다.<br/>"
+    idRule: "• 영문, 숫자, 특수문자(@, ., -, _) 사용 가능.<br/><br/>
+     • 허용된 특수문자는 맨 앞에 올 수 있다.<br/><br/>
+     • 공백을 허용하지 않는다."
+    pwRule: "• 2가지 이상의 문자 종류(대문자, 소문자, 특수문자, 숫자)인 경우,<br/>
+     &nbsp; 8자 이상 20자 미만, 1가지 종류의 문자 구성인 경우 10자 이상<br/>
+     &nbsp; 20자 미만의 비밀번호 입력 제한 범위를 가진다.<br/><br/>
+     • 사용자의 ID를 포함하지 않는다.<br/>
+     &nbsp;&nbsp; 예) ID가 zenius인 경우,<br/>
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  zeniu는 포함 가능, zenius는 포함 불가.<br/><br/>
+     • 사용자의 이메일 ID를 포함하지 않는다.<br/>
+     &nbsp;&nbsp; 예) 이메일ID가 zenius인 경우,<br/>
+     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  zeniu는 포함 가능, zenius는 포함 불가<br/><br/>
+     • 공백을 허용하지 않는다.<br/>"
 
 # Validation
 validation:
