--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -220,6 +220,21 @@ board:
     searchDescription: "View and manage posts."
     viewDescription: "Inquire detailed information about the post."
 
+# Chart
+chart:
+  label:
+    all: "All"
+    chartList: "Statistics Chart List"
+    description: "Chart Description"
+    name: "Chart Name"
+    type: "Chart Type"
+  msg:
+    searchDescription: "View and manage various statistical charts."
+  type:
+    basicLine: "Basic Line Chart"
+    pie: "Pie Chart"
+    stackedColumn: "Stacked Column Chart"
+
 # CMDB
 cmdb:
   attribute:
@@ -701,6 +716,8 @@ login:
 menu:
   board:
     parent: "Board"
+  chart:
+    parent: "Statistic chart"
   config:
     auth: "Auth"
     boardAdmin: "Board management"
