--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -313,6 +313,7 @@ cmdb:
       enterTypeName: "Please enter a Type Name."
       selectType: "Please select a Type."
       selectAvailableClass: "Please select a available Class.<br/>(not root)"
+      selectAvailableType: "Please select a available Type.<br/>(not root)"
     btn:
       import: "Import"
       export: "Export"
